--- a/.env.template
+++ b/.env.template
@@ -9,7 +9,8 @@ MONGODB_URL=
 HASH_POWER=
 
 # JWT AUTHORIZATION
-JWT_SECRET=
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
 JWT_ACCESS_EXPIRE_TIME=
 JWT_REFRESH_EXPIRE_TIME=
 
